# clubrust

./: Cargo.toml  README.md
client/: Cargo.toml
scripts/: backup.sh  deploy.sh  git-pull.sh  git-push.sh  undeploy.sh
server/: Cargo.toml
server/src/: admin.rs  db.rs  main.rs  web.rs
