[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["tokio", "http1", "form"] } 
axum-extra = { version = "0.12.5", features = ["cookie"] }
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1.0.228", features = ["derive"] } 
rusqlite = { version = "0.31" }
chrono = "0.4.42"

